--- a/upgraded-blog/templates/contact.html
+++ b/upgraded-blog/templates/contact.html
@@ -11,8 +11,14 @@
         <div class="row gx-4 gx-lg-5 justify-content-center">
           <div class="col-md-10 col-lg-8 col-xl-7">
             <div class="page-heading">
+            {% if request.method== 'GET' %}
               <h1>Contact Me</h1>
               <span class="subheading">Have questions? I have answers.</span>
+            {% else %}
+              <h1>Successfully Sent Your Message!</h1>
+              <span class="subheading">I'll get back to you as soon as I can.</span>
+            {% endif %}
+
             </div>
           </div>
         </div>
@@ -28,16 +34,11 @@
               and I will get back to you as soon as possible!
             </p>
             <div class="my-5">
-              <!-- * * * * * * * * * * * * * * *-->
-              <!-- * * SB Forms Contact Form * *-->
-              <!-- * * * * * * * * * * * * * * *-->
-              <!-- This form is pre-integrated with SB Forms.-->
-              <!-- To make this form functional, sign up at-->
-              <!-- https://startbootstrap.com/solution/contact-forms-->
-              <!-- to get an API token!-->
-              <form id="contactForm" data-sb-form-api-token="API_TOKEN">
+              
+              <form id="contactForm" method="POST" action="{{ url_for('contact') }}">
                 <div class="form-floating">
                   <input
+                    name="name"
                     class="form-control"
                     id="name"
                     type="text"
@@ -54,6 +55,7 @@
                 </div>
                 <div class="form-floating">
                   <input
+                    name="email"
                     class="form-control"
                     id="email"
                     type="email"
@@ -73,6 +75,7 @@
                 </div>
                 <div class="form-floating">
                   <input
+                    name="phone"
                     class="form-control"
                     id="phone"
                     type="tel"
@@ -89,6 +92,7 @@
                 </div>
                 <div class="form-floating">
                   <textarea
+                    name="message"
                     class="form-control"
                     id="message"
                     placeholder="Enter your message here..."
@@ -129,7 +133,7 @@
                 </div>
                 <!-- Submit Button-->
                 <button
-                  class="btn btn-primary text-uppercase disabled"
+                  class="btn btn-primary text-uppercase"
                   id="submitButton"
                   type="submit"
                 >
@@ -142,10 +146,6 @@
       </div>
     </main>
     {% include 'footer.html' %}
-    <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
-    <!-- * *                               SB Forms JS                               * *-->
-    <!-- * * Activate your form at https://startbootstrap.com/solution/contact-forms * *-->
-    <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
     <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
   </body>
 </html>
