Add link to cafe-api docs

--- a/cafe-api/templates/index.html
+++ b/cafe-api/templates/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Cafe&Wifi API</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Cafe & Wifi API</title>
+  </head>
+  <body>
     <h1>Welcome to the Cafe & Wifi API</h1>
-</body>
+    <p>
+      Please see our docs
+      <a href="https://documenter.getpostman.com/view/17296110/U16bwp2o"
+        >here.</a
+      >
+    </p>
+  </body>
 </html>
