--- a/flask_auth/templates/login.html
+++ b/flask_auth/templates/login.html
@@ -3,6 +3,8 @@
 
 <div class="box">
     <h1>Login</h1>
+    
+    {# Flash Messages #}
     {% with messages = get_flashed_messages() %}
         {% if messages %}
             {% for message in messages %}
@@ -10,6 +12,7 @@
             {% endfor %}
         {% endif %}
     {% endwith %}
+
     <form action="{{ url_for('login') }}" method="post">
         <input type="text" name="email" placeholder="Email" required="required"/>
         <input type="password" name="password" placeholder="Password" required="required"/>
